CurrentActions/src/objects/Source__c.object
<CustomObject>
    <fields>
        <fullName>Analyze__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analyze</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S3_Bucket__c</fullName>
        <label>S3 Bucket</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_File__c</fullName>
        <label>S3 File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schemata_ID__c</fullName>
        <label>Schemata ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schemata_URL__c</fullName>
        <label>Schemata URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source_Data__c</fullName>
        <label>Source Data</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <label>Source URL</label>
        <type>Url</type>
    </fields>
    <label>Source</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>